@@ -3,6 +3,9 @@ plugins {
 	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.4'
 	id 'checkstyle'
+	id 'pmd'
+	id 'jacoco'
+	id 'info.solidsoft.pitest' version '1.15.0'
 
 	// For Flink
 	id 'com.github.johnrengelman.shadow' version '7.1.2'
@@ -27,12 +30,17 @@ java {
 	sourceCompatibility = '17'
 }
 
-checkstyle {
-	toolVersion = '10.15.0'
-	config = resources.text.fromFile('checkstyle.xml')
-	sourceSets = [sourceSets.main]
+bootRun{
+	jvmArgs = ["--add-opens=java.base/java.util=ALL-UNNAMED"]
 }
 
+checkstyle {
+	sourceSets = [sourceSets.main]
+	toolVersion = '10.16.0'
+	config = resources.text.fromFile('../config/checkstyle.xml')
+	showViolations = true
+	ignoreFailures = false // makes the build fail on violations
+}
 
 repositories {
 	mavenCentral()
@@ -53,6 +61,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.kafka:kafka-streams'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
@@ -110,7 +119,41 @@ shadowJar {
 	configurations = [project.configurations.flinkShadowJar]
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
 
+jacoco {
+	toolVersion = "0.8.12"
+}
+
+jacocoTestReport {
+	dependsOn test // Ensures that the test task completes before generating the report.
+
+	reports {
+		xml.required = true
+		html.required = true
+	}
+}
+
+pitest {
+	//adds dependency to org.pitest:pitest-junit5-plugin and sets "testPlugin" to "junit5"
+	// check https://github.com/pitest/pitest-junit5-plugin?tab=readme-ov-file#gradle
+	junit5PluginVersion = '1.2.1'
+
+	targetClasses = ['sp.*']
+	threads = 4
+	timestampedReports = false
+	outputFormats = ['XML', 'HTML']
+}
+
+
+pmd {
+	sourceSets = [sourceSets.main]
+	ruleSets = []
+	ruleSetFiles = files('../config/pmd.xml')
+	incrementalAnalysis = true
+	ignoreFailures = false
+	consoleOutput = true
+	threads = 4
+}
